# cambuffer_recorder_ng

./: .gitignore  CMakeLists.txt  README.md  package.xml  structure.txt
include/cambuffer_recorder_ng/: BufferPool.hpp  CamBufferRecorderNode.hpp  FakeCamera.hpp  FfmpegWriter.hpp  GenTLCamera.hpp  ICamera.hpp  Recorder.hpp  XiCamera.hpp
launch/: fakecam.launch.py
src/: BufferPool.cpp  CamBufferRecorderNode.cpp  FakeCamera.cpp  FfmpegWriter.cpp  GenTLCamera.cpp  Recorder.cpp  XiCamera.cpp  extract_ts2.cpp  gentl_enum.cpp  gentl_enum_tl.cpp  gentl_grab_one.cpp  main.cpp  xi_ffmpeg_rgb_overlay.cpp  xi_ffmpeg_rgb_overlay_decimate.cpp  xi_grab_debayer_color_ppm  xi_grab_debayer_color_ppm.cpp  xi_grab_debayer_ffmpeg_stream  xi_grab_debayer_ffmpeg_stream.cpp  xi_grab_debayer_ffmpeg_timing  xi_grab_debayer_ffmpeg_timing.cpp  xi_grab_debayer_timing  xi_grab_debayer_timing.cpp  xi_grab_fps.cpp  xi_grab_fps_simple.cpp  xi_grab_half_preserve_bayer.cpp  xi_raw_rolling  xi_raw_rolling.cpp  xi_xraw_ringbuffer.cpp  xi_xraw_ringbuffer_lz4.cpp
